# artifact

./: README.md  final_labels.xlsx
Dataset/Phase_2/: static_analysis.json
Dataset/Phase_3/: project_test_statistics_by_count.txt
agentic_labeler/: README.md  pyproject.toml
agentic_labeler/angelica/: __init__.py  cli.py
agentic_labeler/angelica/agents/: __init__.py  agents.py  system.py
agentic_labeler/angelica/llm_client/: llm.py  token_counter.py
agentic_labeler/angelica/metrics/: metrics.py
agentic_labeler/angelica/models/: config.py
agentic_labeler/angelica/parallel/: __init__.py  rate_limiter.py  ray_orchestrator.py  ray_storage.py  ray_worker.py
agentic_labeler/angelica/post-labeling/alter_existing_labeling/: label_alterer.py
agentic_labeler/angelica/post-labeling/new_pattern_extraction/: pattern_extractor.py
agentic_labeler/angelica/post_labeling/new_pattern_extraction/: __init__.py  pattern_extractor.py
agentic_labeler/angelica/prompts/: prompts.py
agentic_labeler/angelica/storage/faiss/: __init__.py  enhanced_vector_faiss.py  noop_index.py  vector_faiss.py
agentic_labeler/angelica/storage/sqlite/: store_sqlite.py
agentic_labeler/scripts/: run_tangent_labeling.py
agentic_labeler/tangent_label/config/: tangent_config.py
tangent/: README.md  cli.py  pyproject.toml
tangent/agent_analysis/: analyzer.py
tangent/agent_analysis/common/: common_analysis.py
tangent/agent_analysis/detect_agents/: detect_agents.py
tangent/agent_analysis/detect_frameworks/: detect_framework.py
tangent/agent_analysis/detect_tests/: detect_agent_tests.py
tangent/agent_analysis/detect_tools/: __init__.py  detect_tools.py
tangent/agent_analysis/model/: models.py
tangent/code_analysis/: code_analysis.py
tangent/code_analysis/backend/scalpel/: __init__.py  scalpel_analyzer.py
tangent/code_analysis/model/: test_complexity_model.py
tangent/code_analysis/test_method_analysis/: __init__.py  assert_detector.py  example_usage.py  test_analyzer.py
tangent/utils/: constants.py
tangent/utils/pretty/: __init__.py  color_logger.py
